--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gatsby-plugin-netlify-cms": "^4.3.2",
     "gatsby-plugin-netlify-cms-paths": "^1.3.0",
     "gatsby-plugin-offline": "^3.2.2",
+    "gatsby-plugin-postcss": "^2.3.4",
     "gatsby-plugin-react-helmet": "^3.3.1",
     "gatsby-plugin-sass": "^2.3.1",
     "gatsby-plugin-sharp": "^2.6.3",
@@ -55,6 +56,7 @@
     "prettier": "2.0.5",
     "react-refresh": "^0.8.2",
     "redux": "^3.0.0",
+    "tailwindcss": "^1.4.6",
     "typescript": "^3.9.2"
   }
 }
