--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-refresh": "^0.8.2",
     "redux": "^3.0.0",
     "tailwindcss": "^1.4.6",
-    "typescript": "^3.9.2"
+    "typescript": "^3.9.2",
+    "webpack-dev-server": "^3.11.0"
   }
 }
