--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "gatsby-transformer-remark": "^2.8.8",
     "gatsby-transformer-sharp": "^2.5.2",
     "netlify-cms": "^2.10.48",
-    "netlify-cms-app": "^2.12.19",
+    "netlify-cms-app": "^2.13.3",
     "node-sass": "^4.14.1",
     "prismjs": "^1.20.0",
     "react": "^16.12.0",
@@ -58,7 +58,6 @@
     "react-refresh": "^0.8.2",
     "redux": "^3.0.0",
     "tailwindcss": "^1.4.6",
-    "typescript": "^3.9.2",
-    "webpack-dev-server": "^3.11.0"
+    "typescript": "^3.9.2"
   }
 }
