--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "firebase": "^8.1.2",
     "gatsby": "^2.25.3",
     "gatsby-background-image": "^1.1.2",
     "gatsby-image": "^2.4.21",
